--- a/rust_core/Cargo.toml
+++ b/rust_core/Cargo.toml
@@ -9,8 +9,8 @@ name = "rust_core"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.20", features = ["extension-module"] }
-numpy = "0.20"  # Zero-copy NumPy array access
+pyo3 = { version = "0.22", features = ["extension-module"] }
+numpy = "0.22"
 
 
 [profile.release]
